# ha-homekit-bridge-connect

./: .gitignore  README.md  config.example.toml  pyproject.toml  scan.py  serve.py
docs/: RELEASE_PLAN.md
reconcile/: __init__.py  __main__.py  app.py  bridges.py  config.py  core.py  ha_client.py  homekit_client.py  matcher.py  models.py  phase2.py  phase3.py  scope.py  setup.py  store.py
tests/: test_stale_mapping_repair.py
